config/turing/turing_mybinder_org_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: turing-mybinder-org
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: turing.mybinder.org
      http:
        paths:
          - path: /
            backend:
              serviceName: binder
              servicePort: 8585
  tls:
    - secretName: tls-binder-turing
      hosts:
        - "turing.mybinder.org"
